// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserGroup /> should render with [toggled=false] 1`] = `
<Group__StyledUserGroup
  onClick={[Function]}
>
  <span>
    bob
  </span>
  <Checkbox
    checked={false}
    partial={false}
    pullRight={false}
  />
</Group__StyledUserGroup>
`;

exports[`<UserGroup /> should render with [toggled=true] 1`] = `
<Group__StyledUserGroup
  onClick={[Function]}
>
  <span>
    bob
  </span>
  <Checkbox
    checked={true}
    partial={false}
    pullRight={false}
  />
</Group__StyledUserGroup>
`;
